# api-embeddings

./: Cargo.toml
src/: main.rs
