[package]
name = "api-embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
hf-hub = "0.3.2"
tokenizers = "0.15.2"
